# comfyui-hotcut

./: LICENSE  PUBLISHING.md  README.md  WORKFLOW.md  __init__.py  hotcut_client.py  nodes.py  pyproject.toml
example_workflows/: HOTCUT — GPT Image 2 (картинка→картинка).json  HOTCUT — GPT Image 2 (текст→картинка).json  HOTCUT — Всё в одном.json  HOTCUT — Удалить фон.json
scripts/: make_thumbnails.py
web/: hotcut.js
