[project]
name = "comfyui-hotcut"
description = "HOTCUT nodes for ComfyUI — cloud image models (GPT Image 2, background removal) billed in rubles via the HOTCUT API. Sharp text, Cyrillic and faces that local models struggle with, right inside your graph."
version = "0.1.0"
license = { text = "MIT License" }
dependencies = ["requests", "Pillow", "numpy"]

[project.urls]
Repository = "https://github.com/Smyshnikof/comfyui-hotcut"

[tool.comfy]
PublisherId = "smyshnikof"
DisplayName = "HOTCUT"
Icon = "https://raw.githubusercontent.com/Smyshnikof/comfyui-hotcut/main/icon.png"
